syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package alvinchow_backend;


message Foo {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.StringValue name = 5;
}
